# arrow-in-mem

./: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.base  Dockerfile.debug  README.md
.github/workflows/: deploy.yaml
client/: client_cli.py
pipeline/: main.py
server/: CMakeLists.txt  main.cc  server.cc  server.h  server_test.cc  string_list_contains_any.cc  string_list_contains_any_test.cc  url_reader.cc  url_reader.h
server/testdata/: na12878_trio_query.textproto
src/: CMakeLists.txt  main.cc
src/client/: Makefile  client.py  client_cli.py  example_query.textproto  requirements.txt  scan_service_pb2.py  scan_service_pb2_grpc.py  seqr_query_service_pb2.py
src/proto/: CMakeLists.txt  scan_service.proto  seqr_query_service.proto
src/server/: CMakeLists.txt  main.cc  server.cc  string_list_contains_any.cc  string_list_contains_any.h  string_list_contains_any_test.cc
